tests/verify/unexpected_meta.stderr
error: unexpected meta-item format `Path`, expected `NameValue`
 --> $DIR/unexpected_meta.rs:4:20
  |
4 | #[shorthand(verify(fn))]
  |                    ^^
