tests/verify/unexpected_meta.rs
use shorthand::ShortHand;

#[derive(ShortHand)]
#[shorthand(verify(fn))]
struct Example {
    field: usize,
}

fn main() {}
